# calic

./: CMakeLists.txt  LICENSE  README.md  build.sh  calendar.c  calendar.h  install.sh  main.c
src/: CMakeLists.txt  Calendar.c  Calendar.h  CalendarView.c  CalendarView.h  Time.c  Time.h  calendar.c  calendar.h  compatibility.h  main.c
test/: CMakeLists.txt  calendar_test.c
